--- a/README.Rmd
+++ b/README.Rmd
@@ -5,26 +5,108 @@ date: "2/28/2021"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+library(dplyr)
+library(nycflights13)
+library(ggplot2)
+
+flights
+?flights
+flights[,5:10]
+colnames(flights)
+str(flights)
 ```
 
-## R Markdown
+## Problem
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+##### In r4ds flights… What time of day should you fly if you want to avoid delays as much as possible? 
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r}
+data <- flights #load a data frame for observing the data
 
-```{r cars}
-summary(cars)
+flights %>%
+  group_by(hour) %>%
+  summarise(avg_delay = mean(dep_delay, na.rm = T), cancel_ratio = sum(is.na(dep_delay))/length(dep_delay))
+```
+From this result, we see that we should better fly from 5:00 a.m. to 12:00 p.m. During this period, the average delay time is less than 9 minutes, and the ratio of cancelled flights is less than 2%.
+
+##### Does this choice depend on anything? Season? Weather? Airport? Airline? Find three patterns (“null results” are ok!). Write your results into Rmarkdown. Include a short introduction that summarizes the three results. Then, have a section for each finding. Support each finding with data summaries and visualizations. Include your code when necessary.
+
+### Introduction
+
+Given that we should better fly from 5:00 a.m. to 12:00 p.m. to avoid delays as much as possible, in the later work, I will explore how this choice is related to other factors, including airlines, departed airports, and seasons. From the below analysis, we know that all of these three factors will affect the average delay time of the flights. However, airlines and seasons have a greater impact on choosing flights during the given period than departed airports.
+
+### Airlines
+
+In this section, I will try to explore how this choice depends on different airlines.
+
+```{r}
+#data frame
+f1 <- flights %>%
+  filter(hour >= 5 & hour <= 11) %>%
+  group_by(carrier) %>%
+  summarise(avg_delay = mean(dep_delay, na.rm = T)) %>%
+  arrange(avg_delay)
+f1
+
+# visualization
+ggplot(f1, aes(x = carrier, y = avg_delay)) +
+  geom_bar(stat = "identity", fill = "#2e2e97") +
+  labs(
+    x = "Carrier",
+    y = "Average Delay Time"
+  )
 ```
 
-## Including Plots
+From the data summaries and visualization above, we see airlines are important while choosing a flight during the given period. AS(the best choice), US, AA, DL, and B6 are better choice this time.
 
-You can also embed plots, for example:
+### Departed Airports
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+In this section, I will try to explore how this choice depends on different departed airports (origins). 
+
+```{r}
+#data frame
+f2 <- flights %>%
+  filter(hour >= 5 & hour <= 11) %>%
+  group_by(origin) %>%
+  summarise(avg_delay = mean(dep_delay, na.rm = T)) %>%
+  arrange(avg_delay)
+f2
+
+# visualization
+ggplot(f2, aes(x = origin, y = avg_delay)) +
+  geom_bar(stat = "identity", fill = "#972e30") +
+  labs(
+    x = "Departed Airport",
+    y = "Average Delay Time"
+  )
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+From the data summaries and visualization above, we see average delay time of different airports also differs, though the difference is less than 3 minutes. But the LGA is still the place with the lowest average delay times, and it is followed by JFK and EWR. 
+
+### Seasons
+
+In this section, I will try to explore how this choice depends on seasons. 
+
+```{r}
+#data frame
+f3 <- flights %>%
+  filter(hour >= 5 & hour <= 11) %>%
+  mutate(season = ifelse(month >= 3 & month <= 5, 'Spring',
+                         ifelse(month >= 6 & month <= 8, 'Summer',
+                                ifelse(month >= 9 & month <= 11, 'Autumn', 'Winter')))) %>% #add a new column called 'season'
+  group_by(season) %>%
+  summarise(avg_delay = mean(dep_delay, na.rm = T)) %>%
+  arrange(avg_delay)
+f3
+
+# visualization
+ggplot(f3, aes(x = season, y = avg_delay)) +
+  geom_bar(stat = "identity", fill = "#C8e356") +
+  labs(
+    x = "Season",
+    y = "Average Delay Time"
+  ) 
+```
+
+From the data summaries and visualization above, we see seasons are really important while choosing a flight from 5:00 a.m. to 12:00 p.m..In autumn, the average delay time is really short, which is less than 1 minute. But in winter, the average delay time is much more, which is over 6 minutes. Therefore, we better fly in autumn(Sep. to Nov.).
